# Planificaci-n_y-sist_cogn

./: README.md
P1/: README.md
P1/Ejercicios_1y2/: recycling_domain_gripper.pddl  recycling_problem_gripper.pddl
P1/calentamiento/: recycling_domain_example.pddl
P2/: README.md  deposit_domain_extra.pddl  deposit_durative_domain.pddl  deposit_durative_domain2.pddl  deposit_fluent_domain.pddl  deposit_problem.pddl  deposit_problem_extra.pddl  depsoit_fluent_domain2.pddl
P3/: README.md  deposit_UPF.py
P3/E1/: deposit_domain.pddl  deposit_problem.pddl
P3/E2/: deposit_domain.pddl  deposit_problem.pddl
P3/E3/: deposit_domain.pddl  deposit_problem.pddl
P4/: README.md
P4/plansys2_p5/: CMakeLists.txt  README.md  package.xml
P4/plansys2_p5/launch/: commands  plansys2_p5_launch.py
P4/plansys2_p5/pddl/: deposit_problem.pddl  p5_domain.pddl
P4/plansys2_p5/src/: drop_action_node.cpp  load_action_node.cpp  move_action_node.cpp  pick_action_node.cpp  unload_action_node.cpp
P5/: README.md
P5/plansys2_deathstar_problem/: CMakeLists.txt  package.xml
P5/plansys2_deathstar_problem/launch/: deathstar_problem_launch.py
P5/plansys2_deathstar_problem/pddl/: commands.txt  deathstar.pddl  problem.pddl
P5/plansys2_deathstar_problem/src/: deathstar_controller_node.cpp  destroy_planet_action_node.cpp  travel_action_node.cpp
UPF/: blocks_UPF.py  example.py
discos_hanoi/: fluents_hanoi_domain.pddl  fluents_hanoi_problem.pddl  hanoi_domain.pddl  hanoi_problem.pddl
p4/: rover_domain.pddl  rover_problem.pddl
trabajo_pddl_cero_dumped/: README.md  deposit_domain.pddl  deposit_problem.pddl  rover_domain.pddl  rover_domain_np.pddl  rover_problem_np.pddl  types_domain.pddl  types_forall_problem.pddl  types_problem.pddl
trabajo_plansys_cero_dumped/: README.md
trabajo_plansys_cero_dumped/plansys2_house_problem/: CMakeLists.txt  package.xml
trabajo_plansys_cero_dumped/plansys2_house_problem/behavior_trees_xml/: ask_open_door.xml  attend_person.xml  dish_wash.xml  pass_door.xml  pick_up_trash.xml  setup_table.xml  tie_bed.xml
trabajo_plansys_cero_dumped/plansys2_house_problem/config/: params.yaml
trabajo_plansys_cero_dumped/plansys2_house_problem/include/plansys2_house_problem/behavior_tree_nodes/: AskDestination.hpp  AskOpenDoor.hpp  CloseTap.hpp  DropSponge.hpp  DropTrash.hpp  GrabSponge.hpp  Move.hpp  OpenDoor.hpp  OpenTap.hpp  PassDoor.hpp  PickTrash.hpp  PillowPlacement.hpp  PlaceBlanket.hpp  PlaceCutlery.hpp  PlaceDishes.hpp  PlaceGlasses.hpp  PresentPerson.hpp  Recharge.hpp  Rinse.hpp  Scrub.hpp  StretchSheet.hpp
trabajo_plansys_cero_dumped/plansys2_house_problem/launch/: house_problem_launch.py
trabajo_plansys_cero_dumped/plansys2_house_problem/pddl/: house_domain.pddl  problem.pddl
trabajo_plansys_cero_dumped/plansys2_house_problem/src/: house_controller_node.cpp
trabajo_plansys_cero_dumped/plansys2_house_problem/src/behavior_tree_nodes/: AskDestination.cpp  AskOpenDoor.cpp  CloseTap.cpp  DropSponge.cpp  DropTrash.cpp  GrabSponge.cpp  Move.cpp  OpenDoor.cpp  OpenTap.cpp  PassDoor.cpp  PickTrash.cpp  PillowPlacement.cpp  PlaceBlanket.cpp  PlaceCutlery.cpp  PlaceDishes.cpp  PlaceGlasses.cpp  PresentPerson.cpp  Recharge.cpp  Rinse.cpp  Scrub.cpp  StretchSheet.cpp
